# gbt_sip_server

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  http_server.rs  log.rs  main.rs  main1.rs.bak  main2.rs.bak  sip_server.rs
src/http/: mod.rs  server.rs
src/http/handler/: mod.rs
src/http/handler/live/: keep_alive.rs  mod.rs  play.rs  stop.rs
src/http/handler/replay/: mod.rs  (+3 more)
src/http/message/: mod.rs
src/http_handler/: mod.rs
src/http_handler/live/: keep_alive.rs  play.rs  stop.rs
src/http_handler/replay/: keep_alive.rs  start.rs  stop.rs
src/http_message/live/: keep_alive.rs  mod.rs  play.rs  stop.rs
src/http_message/replay/: keep_alive.rs  mod.rs  start.rs  stop.rs
src/proto/: gss.proto
src/sip/: mod.rs  server.rs
src/sip/handler/: ack.rs  base.rs  bye.rs  cancel.rs  info.rs  invite.rs  mod.rs  notify.rs  options.rs  prack.rs  publish.rs  refer.rs  register.rs  subscribe.rs  update.rs
src/sip/message/: device_status.rs  keep_alive.rs  mod.rs  sdp.rs
src/sip/request/: bye.rs  invite.rs  mod.rs
src/sip/utils/: auth.rs  codec.rs  mod.rs  sock.rs  tag.rs
src/sip_device/: base.rs  mem_store.rs  mod.rs
src/sip_handler/: ack.rs  base.rs  bye.rs  cancel.rs  info.rs  internal.rs  invite.rs  message.rs  mod.rs  notify.rs  options.rs  prack.rs  publish.rs  refer.rs  register.rs  subscribe.rs  update.rs  utils.rs
src/sip_handler/message/: mod.rs  on_keep_alive.rs
src/sip_handler/utils/: auth.rs  codec.rs  tag.rs
src/sip_message/: keep_alive.rs
src/store/: base.rs  memory.rs  mod.rs  not_impl.rs  pg.rs  postgre.rs  redis.rs
src/utils/: ansi_color.rs  cli.rs  kmp.rs  log.rs  mod.rs
(+17 files in other folders)
