[package]
name = "gbt_sip_server"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = { version = "4.9.0" }

async-trait = { version = "0.1.81" }

chrono = { version = "0.4.38" }

encoding_rs = { version = "0.8.34" }

rand = { version = "0.8.5" }

regex = { version = "1.10.6" }

rsip = { version = "0.4.0" }

serde = { version = "1.0.207", features = ["derive"] }
serde_json = { version = "1.0.124" }
serde-xml-rs = { version = "0.6.0" }

structopt = { version = "0.3.26" }

time = { version = "0.3.36", features = ["formatting", "macros"] }

tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18 ", features = ["env-filter", "time", "local-time", "json"] }

tokio = { version = "1.39.2", features = ["full"] }

uuid = { version = "1.10.0", features = ["v4", "zerocopy"] }



[build-dependencies]
regex = { version = "1.10.6" }
walkdir = { version = "2.5.0" }


